# Fraud-Detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  audit_hybrid_system.py  docker-compose.yml  docker-entrypoint.sh  fraud_members_for_streamlit_testing.txt  hybrid_inference.py  pyproject.toml  rebuild_hybrid_outputs.py  requirements.txt  run_demo_step_by_step.ps1  streamlit_hybrid_demo.py
configs/: batch_scoring.yaml  config.yaml  model_params.yaml  schema.yaml
demo_scripts/: 01_rebuild_hybrid_outputs.ps1  02_audit_hybrid_system.ps1  03_live_score_known_member.ps1  04_live_score_high_risk_unlabeled.ps1  05_launch_streamlit_demo.ps1  run_demo_step_by_step.ps1
notebook/: 03_hybrid_detection.ipynb  04_semi_supervised.ipynb  fraud_eda.ipynb  fraud_feature_modeling.ipynb
orchestration/: notifications.py  prefect.yaml
orchestration/flows/: batch_scoring_flow.py  training_flow.py
scripts/: audit_artifacts.py  audit_gate_verification.py  cleanup_old_runs.py  diagnose_feature_separation.py  diagnose_fraud_label_matching.py  run_api.py  run_batch_scoring.py  run_training.py
src/fraud_detection/: __init__.py  exception.py  logger.py
tests/integration/: test_live_scoring_real.py  test_mongodb_ingestion.py  test_serving_with_real_artifacts.py  test_training_pipeline.py
tests/unit/: test_batch_scoring_filter.py  test_data_validation.py  test_feature_engineering.py  test_feature_parity.py  test_gate_metrics.py  test_live_scoring.py  test_model_training.py  test_mongodb_strategies.py  test_monitoring.py  test_serving.py
(+29 files in other folders)
